--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -78,3 +78,22 @@
 .el-range-editor.el-input__inner {
   display: inline-flex !important;
 }
+
+//drawer的样式
+.el-drawer__body {
+  padding: 20px;
+}
+.demo-drawer__content {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+.demo-drawer__content form{
+  flex:1
+}
+.demo-drawer__footer {
+  display: flex;
+}
+.demo-drawer__footer button {
+  flex: 1;
+}
