--- a/src/styles/combined.scss
+++ b/src/styles/combined.scss
@@ -4776,7 +4776,7 @@ b,strong {
   position:relative
 }
 .nk-navbar {
-  padding:10px 0;
+  padding-top:10px;
   font-size:.96rem;
   z-index:1000;
   transition:background-color .3s;
