--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -274,3 +274,9 @@ div.fieldset-dialog{
   font-size: 24px;
   top:inherit;
 }
+.el-rate__icon {
+  margin-right: 0px;
+}
+.el-rate__text{
+  margin-left:6px
+}
