--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -118,3 +118,6 @@ div.fieldset-dialog{
   font-size:16px;
   padding: 0 30px;
 }
+.el-div-input .el-input--mini .el-input__inner{
+  border-radius:30px!important;
+}
