--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -280,3 +280,49 @@ div.fieldset-dialog{
 .el-rate__text{
   margin-left:6px
 }
+.pclass-image{
+  padding-top:90%!important;
+}
+.small-image-50{
+  padding-top:50%!important;
+}
+.pclass-image img{
+  width: 90%;
+  height: 90%!important;
+  margin: 5%;
+}
+.img-fluid{
+  position: relative;
+  width: 100%;
+  height: 0px;
+  padding-top: 100%;
+}
+.img-fluid img{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.p_line_2{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+  -webkit-box-orient: vertical;
+  line-height: 18px;
+  margin-bottom: 0px!important;
+  font-size: 14px;
+}
+.p_line_3{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  line-clamp: 3;
+  -webkit-box-orient: vertical;
+  line-height: 18px;
+  margin-bottom: 0px!important;
+  font-size: 14px;
+}
